# ccproxy

./: .env.example  .gitignore  .ignore  .lazy.lua  .mcp.json  .pre-commit-config.yaml  BUG-config-dir-ccproxy-yaml.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  USAGE.md  bug.md  check_auth.py  claudejail.md  compose.per-project.yaml  compose.yaml  docker-compose.yaml  flake.nix  issue-6-response.txt  justfile  kitstore.nix  namespace_jail_diagram.py  prisma-bug.md  process-compose.yml  pyproject.toml  query_user_agents.py  sseplan.md
.claude/: AGENTS.md
.claude-plugin/: plugin.json
.claude/agents/: charm-dev.md
.claude/output/: cache_comparison.md  failed_request.json  pgdump-fix-summary.md  postgresql-cli-tools-research.md  request.json
.claude/plans/: ccproxy-db-sql-command.md
.github/workflows/: notify-marketplace.yml  validate-install.yml
.pre-commit-scripts/: check-examples-match-templates.py
docs/: ccproxy-db-sql.md  ccproxy-mcp-notify-spec.md  claude-cli-at-imports.md  configuration.md  crush-oauth.md  docstore.nix  gemini.md  inspect.md  inspector-and-compliance.md  inspector-and-shaping.md  inspector-flows-shaping.md  litellm  llm.md  mcp.md  mitm.md  pplx.md  shaping.md  store  usage.md
docs/llms/: litellm-proxy-logging.md  prompt_caching_docs.md
docs/llms/man/: index.md  litellm-anthropic-messages.md
docs/sdk/: README.md  agent_sdk_caching_example.py  anthropic_sdk.py  deepseek_sdk.py  gemini_sdk.py  lightllm_transform.py  litellm_sdk.py  zai_anthropic_sdk.py
examples/: anthropic_sdk.py  gemini_sdk_image_via_ccproxy.py  gemini_sdk_via_ccproxy.py  litellm_sdk.py
nix/: defaults.nix  module.nix
nix/prisma-cli/: default.nix
prisma/: schema.prisma
scripts/: perplexity_signin.py  qemu_release_test.sh  render_template.py  test_anthropic_cache.py  test_gemini_cache.py  verify_cch.py
skills/using-ccproxy-api/: SKILL.md
skills/using-ccproxy-api/reference/: routing-and-config.md  troubleshooting.md
skills/using-ccproxy-inspector/: SKILL.md
skills/using-ccproxy-inspector/reference/: flow-api-reference.md
skills/using-ccproxy-inspector/scripts/: compliance_status.py  inspect_flow.py  list_flows.py  shaping_status.py
skills/using-litellm-ccproxy/: SKILL.md
skills/using-litellm-ccproxy/reference/: agent-sdk-guide.md  langfuse-setup.md  per-project-setup.md  routing-and-config.md  troubleshooting.md
src/ccproxy/: classifier.py  cli.py  config.py  constants.py  handler.py  hooks.py  metadata_store.py  preflight.py  process.py  router.py  routes.py  rules.py  statusline.py  utils.py
src/ccproxy/compliance/: __init__.py  body.py  classifier.py  extractor.py  fill.py  merger.py  models.py  prepare.py  stamper.py  store.py
src/ccproxy/flows/: __init__.py  store.py
src/ccproxy/hooks/: __init__.py  add_beta_headers.py  apply_compliance.py  capture_headers.py  commitbee_compat.py  extract_pplx_files.py  extract_session_id.py  forward_apikey.py  forward_oauth.py  gemini_capacity_fallback.py  gemini_cli.py  gemini_cli_compat.py  gemini_envelope.py  gemini_oauth_refresh.py  husk.py  inject_claude_code_identity.py  inject_mcp_notifications.py  model_router.py  pplx_preflight.py  pplx_thread_inject.py  reroute_gemini.py  shape.py  stamp_compliance.py  verbose_mode.py
src/ccproxy/inspector/: __init__.py  addon.py  compliance_seeder.py  contentview.py  flow_store.py  gemini_addon.py  mitmproxy_options.py  multi_har_saver.py  namespace.py  oauth_addon.py  pcap.py  pipeline.py  pplx_addon.py  process.py  readiness.py  router.py  routing.py  script.py  shape_capturer.py  telemetry.py  transport_override_addon.py  wg_keylog.py
src/ccproxy/lightllm/: __init__.py  context_cache.py  dispatch.py  noop_logging.py  perplexity.py  pplx.py  pplx_threads.py  registry.py
src/ccproxy/mcp/: __init__.py  buffer.py  routes.py  server.py
src/ccproxy/mitm/: __init__.py  addon.py  namespace.py  process.py  script.py  storage.py  telemetry.py
src/ccproxy/oauth/: __init__.py  anthropic.py  google.py  sources.py
src/ccproxy/patches/: __init__.py  beta_headers.py  passthrough.py
src/ccproxy/pipeline/: __init__.py  context.py  dag.py  executor.py  guards.py  hook.py  keyspace.py  loader.py  overrides.py  render.py  types.py  validation.py  wire.py
src/ccproxy/shaping/: __init__.py  callbacks.py  executor.py  fill.py  gemini.py  models.py  prepare.py  regenerate.py  store.py
src/ccproxy/specs/: __init__.py  billing_salt.py  claude_code_constants.py  claude_code_request.py  model_catalog.py  perplexity_models.json
src/ccproxy/templates/: ccproxy.py  ccproxy.yaml  config.yaml
src/ccproxy/tools/: flows.py
src/ccproxy/transport/: __init__.py  dispatch.py  sidecar.py
stubs/glom/: __init__.pyi
stubs/langfuse/: __init__.pyi  client.pyi
stubs/litellm/: __init__.pyi  anthropic_beta_headers_manager.pyi
stubs/litellm/litellm_core_utils/: get_llm_provider_logic.pyi
stubs/litellm/proxy/: health_check.pyi  proxy_server.pyi
stubs/mitmproxy/: addonmanager.pyi  connection.pyi  flow.pyi  http.pyi
stubs/opentelemetry/: __init__.pyi
stubs/xepor/: __init__.pyi
tests/: conftest.py  test_add_beta_headers.py  test_anthropic_auth_source.py  test_auth_source.py  test_auth_source_glom.py  test_beta_headers.py  test_billing_salt.py  test_caching_hooks.py  test_classifier.py  test_classifier_integration.py  test_claude_code_integration.py  test_cli.py  test_compliance_body.py  test_compliance_classifier.py  test_compliance_extractor.py  test_compliance_fill.py  test_compliance_hook.py  test_compliance_husk.py  test_compliance_merger.py  test_compliance_models.py  test_compliance_prepare.py  test_compliance_seeder.py  test_compliance_stamper.py  test_compliance_store.py  test_config.py  test_content_injection.py  test_context.py  test_context_cache.py  test_dag.py  test_db_prompt.py  test_db_sql.py  test_edge_cases.py  test_extensibility.py  test_extract_session_id.py  test_flow_enrichments.py  test_flow_store.py  test_forward_oauth.py  test_gemini_addon.py  test_gemini_addon_capacity.py  test_gemini_capacity_fallback.py  (+79 more)
(+26 files in other folders)
