[project]
name = "claude-ccproxy"
version = "1.2.0"
description = "Scriptable mitmproxy-based LLM API interceptor for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
keywords = ["proxy", "routing", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "litellm>=1.13.0,<=1.82.6",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "fastapi>=0.100.0",
  "attrs>=23.0.0",
  "anthropic>=0.39.0",
  "tyro>=0.7.0",
  "rich>=13.7.1",
  "certifi>=2024.0.0",
  "mitmproxy>=10.0.0",
  "xepor>=0.6.0",
  "humanize>=4.0.0",
]

[project.scripts]
ccproxy = "ccproxy.cli:entry_point"

[project.optional-dependencies]
otel = [
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "opentelemetry-semantic-conventions>=0.41b0",
]
journal = [
  "systemd-python>=235",
]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "mypy>=1.17.0",
  "ruff>=0.12.6",
  "pre-commit>=4.2.0",
  "coverage>=7.10.1",
  "types-pyyaml>=6.0.12.20250516",
  "types-requests>=2.32.4.20250611",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccproxy"]

[tool.hatch.build.targets.sdist]
include = ["src/ccproxy", "tests", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--color=yes", "--tb=short", "--strict-markers", "--strict-config",
  "--cov=ccproxy", "--cov-report=term-missing", "--cov-fail-under=90",
  "-m", "not e2e", "--ignore=tests/test_shell_integration.py",
]
markers = [
  "e2e: end-to-end integration tests that run real Claude CLI (may be slow)",
]

[tool.coverage.run]
source = ["src/ccproxy"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
mypy_path = "stubs"

# Turn these off to avoid conflicts with pyright's Unknown-type narrowing.
# pyright strict narrows `isinstance(x: Any, dict)` to `dict[Unknown, Unknown]`
# and requires casts that mypy considers redundant.
warn_unused_ignores = false
warn_redundant_casts = false

# Strict-equivalent flags
strict_equality = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
  "litellm.*",
  "opentelemetry",
  "opentelemetry.*",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pyright]
include = ["src", "tests"]
ignore = ["tests/"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
stubPath = "stubs"

[tool.ty]
python_version = "3.12"

[tool.ty.src]
root = "src"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "C4", "N", "YTT", "S", "PTH"]
ignore = [
  "S101", # Use of assert detected
  "S104", # Possible binding to all interfaces
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["ccproxy"]

[tool.uv]
override-dependencies = ["mitmproxy>=10.0.0"]

[dependency-groups]
dev = [
  "beautysh>=6.2.1",
  "coverage>=7.10.1",
  "mypy>=1.17.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.6",
  "setuptools>=80.9.0",
  "types-pyyaml>=6.0.12.20250516",
  "types-requests>=2.32.4.20250611",
]
